--- a/assets/icons.qrc
+++ b/assets/icons.qrc
@@ -1,13 +1,25 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
+	<file>icons/objects/and.png</file>
+	<file>icons/objects/basicEvent.png</file>
+	<file>icons/objects/inhibit.png</file>
+	<file>icons/objects/kn.png</file>
+	<file>icons/objects/or.png</file>
+	<file>icons/objects/transfert.png</file>
+	<file>icons/objects/xor.png</file>
+	<file>icons/about.png</file>
+	<file>icons/add.png</file>
+	<file>icons/copy.png</file>
+	<file>icons/cut.png</file>
+	<file>icons/edit.png</file>
+	<file>icons/evaluate.png</file>
+	<file>icons/exit.png</file>
+	<file>icons/manage.png</file>
 	<file>icons/new.png</file>
 	<file>icons/open.png</file>
-	<file>icons/save.png</file>
-	<file>icons/saveAs.png</file>
-	<file>icons/exit.png</file>
-	<file>icons/cut.png</file>
-	<file>icons/copy.png</file>
 	<file>icons/paste.png</file>
+	<file>icons/saveAs.png</file>
+	<file>icons/save.png</file>
 	<file>icons/zoomIn.png</file>
 	<file>icons/zoomOut.png</file>
 </qresource>
