--- a/src/assets/icons.qrc
+++ b/src/assets/icons.qrc
@@ -7,6 +7,7 @@
 	<file>icons/edit.png</file>
 	<file>icons/evaluate.png</file>
 	<file>icons/exit.png</file>
+	<file>icons/ftedit.png</file>
 	<file>icons/manage.png</file>
 	<file>icons/new.png</file>
 	<file>icons/open.png</file>
