--- a/src/assets/icons.qrc
+++ b/src/assets/icons.qrc
@@ -4,17 +4,24 @@
 	<file>icons/add.png</file>
 	<file>icons/copy.png</file>
 	<file>icons/cut.png</file>
+	<file>icons/detach.png</file>
 	<file>icons/edit.png</file>
 	<file>icons/evaluate.png</file>
 	<file>icons/exit.png</file>
 	<file>icons/ftedit.png</file>
 	<file>icons/manage.png</file>
+	<file>icons/moveFirst.png</file>
+	<file>icons/moveLast.png</file>
+	<file>icons/moveLeft.png</file>
+	<file>icons/moveRight.png</file>
 	<file>icons/new.png</file>
 	<file>icons/open.png</file>
 	<file>icons/paste.png</file>
+	<file>icons/remove.png</file>
 	<file>icons/saveAs.png</file>
 	<file>icons/save.png</file>
 	<file>icons/zoomIn.png</file>
 	<file>icons/zoomOut.png</file>
+	<file>icons/zoomReset.png</file>
 </qresource>
 </RCC>
