Added AUTHORS file, compilation fix + fusion style set

--- a/src/assets/icons.qrc
+++ b/src/assets/icons.qrc
@@ -8,7 +8,7 @@
 	<file>icons/edit.png</file>
 	<file>icons/evaluate.png</file>
 	<file>icons/exit.png</file>
-	<file>icons/ftedit.png</file>
+	<file>icons/ftedit.ico</file>
 	<file>icons/manage.png</file>
 	<file>icons/moveFirst.png</file>
 	<file>icons/moveLast.png</file>
