--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 
 body{
-    background-color: #DAD5DA;
-    color: #66170C;
+    background-color: white;
+    color: #753C19;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(rgb(153, 148, 153),rgb(185, 171, 185));
+    font-size: large;
 }
 
 header{
@@ -15,33 +15,31 @@ header{
     color: #3B0201;
     border: 6px #3B0201 solid;
     border-radius: 5px;
-    padding: 1%;
+    padding: 12px;
     margin: 1%;
-    background: linear-gradient(rgb(153, 148, 153),rgb(185, 171, 185));
 }
 
-.main{
-    border: 6px #3B0201 solid;
-    border-radius: 5px;
-    padding: 0 0px 30px 0px;
-    margin: 12px 12px 12px 12px;
-    text-align: center;
-    background: linear-gradient(#70AE6E,#82AC9F);
-    
-
-
-}
 .cont{
     display: flex;
-    
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     width: 1370px;
-    
     padding: 12px 12px 12px 12px;
     margin: 1%;
 }
+
+.main{
+    border: 6px #753C19 solid;
+    border-radius: 5px;
+    padding: 0 0px 30px 0px;
+    margin: 3%;
+    text-align: center;
+    
+
+
+}
+
 
 .el:nth-child(1){
     width: auto;
@@ -60,65 +58,66 @@ header{
 }
 
 
+section{
+    background-color: #FFEBB7;
+    margin: 20px;
+    
+}
+
+
 section h3{
-    background-color: #BEEE62;
-    border-radius: 5px;
+    background-color: #E3BF75;
     padding: 5px;
     margin : 0px;
     align-content: center;
     text-align: center;
-    background: linear-gradient(#BEEE62,white);
 }
 
 section h2{
-    background-color: #BEEE62;
-    border-radius: 5px;
+    background-color: #E3BF75;
     padding: 5px;
     margin : 0px;
     align-content: center;
     text-align: center;
-    background: linear-gradient(#BEEE62,white);
 }
 
 
 section section{
-    border: 6px #1B383B solid;
+    border: 6px #B87832 solid;
     border-radius: 5px;
-    padding: 0 0px 30px 0px;
-    margin: 12px 12px 12px 12px;
+    padding: 0px 0px 30px 0px;
+    margin: 20px 20px 20px 20px;
     text-align: center;
-    background: linear-gradient(#366467,#BEEE62); 
 }
 
 footer {
-    border: 6px #1B383B solid;
+    border: 6px #B87832 solid;
     border-radius: 5px;
     padding: 0 0px 0px 0px;
-    margin: 12px 12px 12px 12px;
+    margin: 3%;
     text-align: center;
-    background: linear-gradient(#366467,#BEEE62);
 }
 
 
 footer h2{
-    background-color: #BEEE62;
-    border-radius: 5px;
+    background-color: #E3BF75;
+    
     padding: 5px 10px 20px 5px;
     margin : 0px;
     align-content: center;
     text-align: center;
-    background: linear-gradient(#BEEE62,white);
 }
 
 footer h3{
-    background-color: #386137;
-    border-radius: 5px;
+    background-color: #B87832;
+    
     padding: 5px;
     margin : 0px;
     align-content: center;
     text-align: center;
-    background: linear-gradient(#386137,white);
 }
+
+
 
 
 
